post interview-crib-sheet

--- a/_posts/2015-11-18-index_en.md
+++ b/_posts/2015-11-18-index_en.md
@@ -14,8 +14,8 @@ I will write other things about me when I feel like doing so.
 
 [GitHub](https://github.com/ecsys)\|LinkedIn\|Instagram
 
-================================
+*****
 
-This blog forks [Yansu's Blog](https://github.com/suyan/suyan.github.io), is hosted on[Github](https://github.com/ecsys/ecsys.github.io)
+This blog forks [Yansu's Blog](https://github.com/suyan/suyan.github.io) and is hosted on [Github](https://github.com/ecsys/ecsys.github.io)
 Theme is provided by [3-Jekyll](https://github.com/P233/3-Jekyll) 
 
